--- a/fly.toml
+++ b/fly.toml
@@ -7,7 +7,10 @@ kill_timeout = 5
 processes = []
 
 [env]
-BOT_NUMBER = "+12692462089"
+BOT_NUMBER = "+12314341024"
+SIGNAL="signal-cli"
+DOWNLOAD=1
+AUTOSAVE=1
 
 [experimental]
   allowed_public_ports = []
