--- a/fly.toml
+++ b/fly.toml
@@ -10,7 +10,7 @@ processes = []
 BOT_NUMBER = "+12314341024"
 SIGNAL="signal-cli"
 DOWNLOAD=1
-AUTOSAVE=1
+#AUTOSAVE=1
 
 [experimental]
   allowed_public_ports = []
